syntax = "proto3";

package frontend.v1;

option go_package = "github.com/ole-larsen/plutonium/gen/frontend/v1;frontendv1";

import "google/protobuf/empty.proto";
import "frontend/v1/file.proto";

message PublicPage {
    int64 id = 1;
    PublicPageAttributes attributes = 2;
}

message PublicPageAttributes {
    string title = 1;
    string content = 2;
    string description = 3;
    string link = 4;
    string category = 5;
    PublicFile image = 6;
} 

message PageRequest {
  string provider = 1;
}

message PageResponse {
  oneof response {
    PublicPage data = 1;
    google.protobuf.Empty error = 2;
  }
}