syntax = "proto3";

package frontend.v1;

option go_package = "github.com/ole-larsen/plutonium/gen/frontend/v1;frontendv1";

import "common/v1/file.proto";

message PublicWalletConnectItem {
  int64 id = 1;
  PublicWalletConnectItemAttributes attributes = 2;
}

message PublicWalletConnectItemAttributes {
  string title = 1;
  string link = 2;
  string description = 3;
  common.v1.PublicFile image = 4;
}

message WalletConnectItemsRequest {
  string provider = 1;
}